Fix extra bottom spacing in app/token lists

--- a/indico/web/client/styles/partials/_boxes.scss
+++ b/indico/web/client/styles/partials/_boxes.scss
@@ -485,6 +485,10 @@ $i-box-padding: 10px;
       margin-top: 0;
     }
   }
+
+  &:last-child {
+    margin-bottom: -10px;
+  }
 }
 
 .error-box {
